Added the print line.

--- a/DisplayInfo.ipynb
+++ b/DisplayInfo.ipynb
@@ -2,15 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "62c076ba-bbf2-45e3-b694-f3c9e3253cfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type in your name! Nick\n",
+      "Type in your age! 19\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your name is  Nick  and you are  19  years old.\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Type in your name!\")\n",
     "age = input(\"Type in your age!\")\n",
-    "\n"
+    "\n",
+    "print(\"Your name is \",name, \" and you are \",age, \" years old.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c331c1-7132-4649-8e7b-f5c3526d9c43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
